# Physical-electronics-oven

./: README.md
Back UP/Another back up/: back up main.py  blink.py
Back UP/Pico_code/: LCD.py  SSR.py  encoder_example.py  encoder_example_async.py  main.py  mcp9600.py
Back UP/Project code - Copy/: LCD.py  (+3 more)
C++ files/: CMakeLists.txt  README.md
C++ files/src/: LCD.cpp  gpio_lcd.cpp  gpio_lcd.hpp  lcd_api.cpp  lcd_api.hpp  main.cpp  mcp9600.hpp  rotary.cpp  rotary.hpp  ssr.cpp  ssr.hpp
C++_files/: CMakeLists.txt  README.md
Physical Electronics Oven/: Custom_library.bak  Custom_library.kicad_sym  Physical Electronics Oven.kicad_pcb  Physical Electronics Oven.kicad_prl  Physical Electronics Oven.kicad_pro  Physical Electronics Oven.kicad_sch  Physical Electronics Oven.kicad_sch-bak  Physical Electronics Oven.plt  fp-info-cache  sym-lib-table
Pico_code/: LCD.py  PID.py  gpio_lcd.py  main.py  main_OLD.py
Pictures/: Oven state machine.drawio
Project code/: LCD.py  Slaved_main.py
Raw Data/: PID_log_1_200c.csv  PID_log_1_500c.csv  PID_log_2_500c.csv  PWM_log_10_120_1%.csv  PWM_log_11_120_50%.csv  PWM_log_12_120_100%.csv  PWM_log_13_90_1%.csv  PWM_log_14_90_50%.csv  PWM_log_15_90_100%.csv  PWM_log_16_60_0.1%.csv  PWM_log_1_60_1%.csv  PWM_log_2_60_50%.csv  PWM_log_3_60_100%.csv  PWM_log_4_10_1%.csv  PWM_log_5_10_50%.csv  PWM_log_6_10_100%.csv  PWM_log_7_30_1%.csv  PWM_log_8_30_50%.csv  PWM_log_9_30_100%.csv  temp_log_1.csv  temp_log_2.csv  temp_log_3.5.csv  temp_log_3.csv
Test Code/: PWM Test.py  Temp_OnBoard.py  Temp_Test.py  Temp_loger.py  encoder_example.py
(+15 files in other folders)
